--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "mainscope",
+  "name": "MainScopeJS",
   "main": "MainScope.js",
   "version": "1.0.0",
   "homepage": "https://github.com/copaste/MainScope",
